refactor: replace deprecated URL constructor with URI.create